# proving-quantum-theorems-in-coq

./: README.md  _CoqProject  dune-project  proving-quantum-theorems-in-coq.opam
.github/workflows/: main.yml  makefile.yml
theories/: HeisenbergUncertainty.v  NoCloningTheorem.v  PhaseKickback.v  dune
