opam-version: "2.0"

synopsis: "Coq proofs related to quantum computation"
description: """
Proving theorems and results related to quantum
computing. Uses inQWIRE's QuantumLib."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "3.5"}
  "coq" {>= "8.16"}
  "coq-compcert" {>= "3.13.1"}
  "coq-vst" {>= "2.13" & < "3~"}
  "coq-quantumlib" {>= "1.6.0"}
]

